--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "cross-env": "^7.0.3"
   }
 }
