--- a/package.json
+++ b/package.json
@@ -1,41 +1,30 @@
 {
-  "name": "backend",
+  "name": "clinicpro",
   "version": "1.0.0",
-  "description": "Backend of clinic management system",
-  "main": "Clinic-Backend/src/index.js",
+  "description": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon Clinic-Backend/src/index.js",
-    "start": "cross-env NODE_ENV=production node Clinic-Backend/src/index.js",
-    "build": "npm install && npm install --prefix Clinic-Frontend && npm run build --prefix Clinic-Frontend"
+    "dev": "cross-env NODE_ENV=development nodemon backend/index.js",
+    "start": "cross-env NODE_ENV=production node backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "keywords": [
-    "Node",
-    "Js",
-    "Express",
-    "Js",
-    "Mongo",
-    "Db"
-  ],
-  "author": "Syed Waseem",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "multer": "^1.4.5-lts.1",
-    "postman-to-openapi": "^3.0.1",
-    "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^5.0.0"
+    "mongoose": "^8.5.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "nodemon": "^3.0.3",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.4"
   }
 }
