--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
-    "react-uid": "^2.3.3"
+    "react-uid": "^2.3.3",
+    "vite": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -33,6 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "vite": "^5.3.3"
   }
 }
