--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-uid": "^2.3.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
