--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,23 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install -g vite && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.49.2",
-    "@tanstack/react-query-devtools": "^5.49.2",
+    "@tanstack/react-query": "^5.50.1",
     "axios": "^1.7.2",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0",
-    "react-uid": "^2.3.3",
-    "vite": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.1"
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -35,6 +31,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.3"
+    "vite": "^5.3.1"
   }
 }
